<resources>
    <string name="app_name">TMBD</string>
    <string name="dAutor">©2021 WPOSS</string>
    <string name="Autor">Juan José Cárdenas Trillos</string>
    <string name="populares">Populares</string>
    <string name="calificadas">Películas mejor calificadas</string>
    <string name="buscar">Buscar película, series de TV o persona...</string>
    <string name="Error">ERROR: sin acceso a internet...</string>
    <string name="t1">Bienvenidos.</string>
    <string name="des">Descripción.</string>
    <string name="t2">Millones de películas, programas de televisión y personas por descubrir. Explora ahora.</string>

</resources>