<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdet"
    tools:context=".views.PrincipalActivityView">



    <LinearLayout
        android:id="@+id/contenedor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t1"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/t2"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:background="@drawable/contenedor"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintTop_toBottomOf="@id/contenedor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <EditText
            android:id="@+id/buscador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:textSize="15dp"
            android:backgroundTint="@color/verde"
            android:drawableEnd="@drawable/ic_lupa"
            android:textColorHint="@color/gris"
            android:hint="@string/buscar"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:text="@string/populares"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedor"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/menerror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Error"
        android:layout_marginStart="22dp"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peliculas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menerror">

    </androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:id="@+id/textp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/calificadas"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peliculas"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peliculas2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textp2">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>