<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdet"
    tools:context=".views.Descripcion">



    <ImageView

        android:id="@+id/img3"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:background="#4F000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_atrasn"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/contenedor3"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="1"
        android:background="@drawable/contenedor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/img3"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/nombre3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="@string/Autor"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fecha3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:hint="@string/dAutor" />

        <TextView
            android:id="@+id/votacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_estrella"
            android:hint="Calificación"
            android:textColor="@color/gris" />

    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginTop="25dp"
       android:layout_marginEnd="25dp"
       android:orientation="vertical"
       app:layout_constraintTop_toBottomOf="@id/contenedor3"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       >
       <TextView
           android:id="@+id/des"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_marginTop="12dp"
           android:text="@string/des"
           android:textColor="@color/white"
           android:textSize="20dp"
           android:textStyle="bold"/>

       <TextView
           android:id="@+id/descripcion"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_marginTop="12dp"
           android:hint="Calificación"
           android:textColor="@color/gris"
           android:textSize="14dp"
           android:textStyle="bold"/>

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>